--- a/collections.html
+++ b/collections.html
@@ -28,7 +28,7 @@
         }
     </script>
 
-    <link rel="stylesheet" href="style(css)/style.css?v=collections_final_v2">
+    <link rel="stylesheet" href="style(css)/style.css?v=collections_fixed">
 </head>
 
 <body class="bg-ceramic-black text-ceramic-white font-sans min-h-screen flex flex-col">
@@ -165,15 +165,15 @@
                 
                 <table class="w-full text-left border-collapse">
                     <tbody class="text-sm md:text-base">
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray w-1/3">Title</td><td class="py-3 text-ceramic-white" id="metaTitle"></td></tr>
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Author</td><td class="py-3 text-ceramic-white" id="metaAuthor"></td></tr>
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Subject</td><td class="py-3 text-ceramic-white" id="metaSubject"></td></tr>
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray align-top">Description</td><td class="py-3 text-ceramic-white leading-relaxed text-sm opacity-90" id="metaDescription"></td></tr>
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Date</td><td class="py-3 text-ceramic-white" id="metaDate"></td></tr>
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Type</td><td class="py-3 text-ceramic-white" id="metaType"></td></tr>
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Size</td><td class="py-3 text-ceramic-white" id="metaDimension"></td></tr>
-                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Place</td><td class="py-3 text-ceramic-white" id="metaPlace"></td></tr>
-                        <tr><td class="py-3 font-bold text-ceramic-gray">Source</td><td class="py-3 text-ceramic-white break-all"><a href="#" id="metaSource" class="text-blue-400 hover:text-blue-300" target="_blank">Link</a></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray w-1/3">Title</td><td class="py-3 text-ceramic-white" id="modalTitleMeta"></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Author</td><td class="py-3 text-ceramic-white" id="modalAuthor"></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Subject</td><td class="py-3 text-ceramic-white" id="modalSubject"></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray align-top">Description</td><td class="py-3 text-ceramic-white leading-relaxed text-sm opacity-90" id="modalDescription"></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Date</td><td class="py-3 text-ceramic-white" id="modalDate"></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Type</td><td class="py-3 text-ceramic-white" id="modalType"></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Size</td><td class="py-3 text-ceramic-white" id="modalSize"></td></tr>
+                        <tr class="border-b border-white/5"><td class="py-3 font-bold text-ceramic-gray">Place</td><td class="py-3 text-ceramic-white" id="modalPlace"></td></tr>
+                        <tr><td class="py-3 font-bold text-ceramic-gray">Source</td><td class="py-3 text-ceramic-white break-all"><a href="#" id="modalSource" class="text-blue-400 hover:text-blue-300" target="_blank">Link</a></td></tr>
                     </tbody>
                 </table>
             </div>
@@ -187,6 +187,6 @@
         </div>
     </footer>
 
-    <script src="script/js/script.js?v=collections_final_v2"></script>
+    <script src="script/js/script.js?v=collections_final_fixed"></script>
 </body>
 </html>
