--- a/timeline web.html
+++ b/timeline web.html
@@ -27,7 +27,7 @@
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Serif+SC:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style(css)/style.css?v=timeline_fix_v1">
+  <link rel="stylesheet" href="style(css)/style.css?v=timeline_fix_v2">
 </head>
 
 <body class="bg-ceramic-white text-ceramic-black font-sans scroll-smooth">
@@ -148,7 +148,7 @@
     
     <section class="bg-white">
       <div class="max-w-7xl mx-auto px-4 md:px-5 lg:px-6">
-        <div class="grid md:grid-cols-[minmax(0,2.4fr)_minmax(0,4.6fr)] gap-4 lg:gap-6 items-stretch">
+        <div class="grid md:grid-cols-[minmax(0,2.4fr)_minmax(0,4.6fr)] gap-4 lg:gap-6 items-start">
 
           <div class="flex gap-4 h-[70vh] md:h-[75vh] lg:h-[78vh]">
             <div class="flex-1 flex items-center justify-center">
@@ -174,7 +174,7 @@
             </div>
           </div>
 
-          <div class="rounded-2xl border border-gray-200 bg-white shadow-soft p-4 md:p-5 lg:p-6 flex flex-col h-[70vh] md:h-[75vh] lg:h-[78vh] ml-15 md:ml-14 lg:ml-40 mt-6 md:mt-10">
+          <div class="rounded-2xl border border-gray-200 bg-white shadow-soft p-4 md:p-5 lg:p-6 flex flex-col h-auto max-h-[75vh] ml-15 md:ml-14 lg:ml-40 mt-6 md:mt-10">
             <div class="flex flex-wrap items-center gap-2 text-[0.7rem] tracking-[0.18em] uppercase text-gray-500 mb-3">
               <span class="px-2 py-0.5 rounded-full border border-gray-300">Timeline Storyline</span>
               <span class="px-2 py-0.5 rounded-full border border-gray-300">5 Rooms · 18 Objects</span>
