--- a/timeline web.html
+++ b/timeline web.html
@@ -168,19 +168,19 @@
                 <button class="timeline-step timeline-active" data-section-timeline="1"><div class="timeline-dot"></div><span class="timeline-year-label">MING 1500-1650</span></button>
                 <button class="timeline-step" data-section-timeline="2"><div class="timeline-dot"></div><span class="timeline-year-label">HIGH QING 1650-1800</span></button>
                 <button class="timeline-step" data-section-timeline="3"><div class="timeline-dot"></div><span class="timeline-year-label">LATE QING 1800-1990s</span></button>
-                <button class="timeline-step" data-section-timeline="4"><div class="timeline-dot"></div><span class="timeline-year-label">MODERN 1900s</span></button>
+                <button class="timeline-step" data-section-timeline="4"><div class="timeline-dot"></div><span class="timeline-year-label">MODERN 1990-2035s</span></button>
                 <button class="timeline-step" data-section-timeline="5"><div class="timeline-dot"></div><span class="timeline-year-label">FUTURE 2035+</span></button>
               </div>
             </div>
           </div>
 
-          <div class="rounded-2xl border border-gray-200 bg-white shadow-soft p-4 md:p-5 lg:p-6 flex flex-col h-auto max-h-[75vh] ml-15 md:ml-14 lg:ml-40 mt-6 md:mt-10">
+          <div class="rounded-2xl border border-gray-200 bg-white shadow-soft p-4 md:p-5 lg:p-6 flex flex-col h-[58vh] max-h-[65vh] ml-15 md:ml-14 lg:ml-40 mt-20 md:mt-30">
             <div class="flex flex-wrap items-center gap-2 text-[0.7rem] tracking-[0.18em] uppercase text-gray-500 mb-3">
               <span class="px-2 py-0.5 rounded-full border border-gray-300">Timeline Storyline</span>
               <span class="px-2 py-0.5 rounded-full border border-gray-300">5 Rooms · 18 Objects</span>
             </div>
 
-            <div class="mt-1 section-scroll overflow-y-auto pr-1 text-sm md:text-[0.95rem] leading-relaxed space-y-8">
+            <div class="flex-1 mt-6 section-scroll overflow-y-auto pr-1 text-sm md:text-[0.95rem] leading-relaxed">
 
               <article class="section-article active-article" data-section-article="1">
                 <h2 class="font-serif text-xl md:text-2xl font-semibold text-brand-blue mb-1">Room 1 · The Empire's Gaze (Ming)</h2>
@@ -192,10 +192,10 @@
                     <p class="mb-2"><strong>The Great Voyages! 🚢</strong><br>Long ago, a famous admiral named Zheng He sailed giant wooden ships all the way to Africa! He brought back giraffes and jewels. Later, traders from Europe came to buy Chinese porcelain because they loved the beautiful blue drawings on white clay. They paid with silver coins!</p>
                 </div>
                 <div class="view-content view-scholar">
-                    <p class="mb-2">This era defines the transition from the state-sponsored voyages of Zheng He (1405–1433) to the privatized maritime trade networks of the late Ming. The influx of New World silver via the Manila Galleon trade fundamentally altered the Ming fiscal system and stimulated Jingdezhen's production of 'Kraak' porcelain, specifically designed for European bourgeois tastes.</p>
+                    <p class="mb-2">This era defines the transition from the state-sponsored voyages of Zheng He (1405-1433) to the privatized maritime trade networks of the late Ming. The influx of New World silver via the Manila Galleon trade fundamentally altered the Ming fiscal system and stimulated Jingdezhen's production of 'Kraak' porcelain, specifically designed for European bourgeois tastes.</p>
                 </div>
 
-                <h3 class="font-semibold text-sm md:text-base text-gray-800 mt-3 mb-1">Object Highlights</h3>
+                <h3 class="font-semibold text-sm md:text-base text-gray-800 mt-5 mb-1">Object Highlights</h3>
                 <div class="mt-4 grid grid-cols-3 gap-2 md:gap-3">
                   <div class="aspect-[4/3] rounded-xl border border-gray-200 bg-gray-50 flex items-center justify-center text-[0.7rem] text-gray-500">
                     <img src="asset/img/item3.png" alt="Wucai Vase" class="w-full h-full object-cover">
@@ -222,6 +222,7 @@
                     <p class="mb-2">The High Qing period represents the zenith of the Imperial Kiln system. Through the agency of Jesuit missionaries like Castiglione, the court assimilated Western enamelling technology (Falangcai). This was not passive reception but active appropriation, using Western perspective and chiaroscuro to visually construct the Qianlong Emperor's universalist ideology.</p>
                 </div>
 
+                <h3 class="font-semibold text-sm md:text-base text-gray-800 mt-5 mb-1">Object Highlights</h3>
                 <div class="mt-4 grid grid-cols-3 gap-2 md:gap-3">
                   <div class="aspect-[4/3] rounded-xl border border-gray-200 bg-gray-50 flex items-center justify-center text-[0.7rem] text-gray-500">
                     <img src="asset/img/item4.png" class="w-full h-full object-cover">
@@ -248,6 +249,7 @@
                     <p class="mb-2">The post-Opium War era witnessed the disintegration of the imperial monopoly on high-quality ceramics. The rise of treaty ports like Shanghai fostered a bourgeois consumer culture. Porcelain production shifted towards 'Qianjiang' and later 'Fencai' styles, reflecting a modernization of literati aesthetics and the commodification of art for a nascent urban market.</p>
                 </div>
 
+                <h3 class="font-semibold text-sm md:text-base text-gray-800 mt-5 mb-1">Object Highlights</h3>
                 <div class="mt-4 grid grid-cols-3 gap-2 md:gap-3">
                   <div class="aspect-[4/3] rounded-xl border border-gray-200 bg-gray-50 flex items-center justify-center text-[0.7rem] text-gray-500">
                     <img src="asset/img/item9.png" class="w-full h-full object-cover">
@@ -283,6 +285,7 @@
                     <p class="mb-2">The Reform and Opening-up policy (1978) catalyzed the transition of Jingdezhen from a socialist production unit to a global creative cluster. Contemporary ceramicists now engage in a transnational dialogue, deconstructing traditional forms (as seen in Felicity Aylieff’s monumental works) to negotiate Chinese cultural identity in a globalized art world.</p>
                 </div>
 
+                <h3 class="font-semibold text-sm md:text-base text-gray-800 mt-5 mb-1">Object Highlights</h3>
                 <div class="mt-4 grid grid-cols-3 gap-2 md:gap-3">
                   <div class="aspect-[4/3] rounded-xl border border-gray-200 bg-gray-50 flex items-center justify-center text-[0.7rem] text-gray-500">
                     <img src="asset/img/item14.JPEG" class="w-full h-full object-cover">
@@ -309,6 +312,7 @@
                     <p class="mb-2">The intersection of craft and Web3 technologies redefines materiality. Porcelain NFTs challenge the ontology of the object: works like "March" utilize NFC chips to bridge physical provenance with digital immutability. This room interrogates the future of heritage conservation in an era of virtualization and the Metaverse.</p>
                 </div>
 
+                <h3 class="font-semibold text-sm md:text-base text-gray-800 mt-5 mb-1">Object Highlights</h3>
                 <div class="mt-4 grid grid-cols-3 gap-2 md:gap-3">
                   <div class="aspect-[4/3] rounded-xl border border-gray-200 bg-gray-50 flex items-center justify-center text-[0.7rem] text-gray-500">
                     <img src="asset/img/item16.png" class="w-full h-full object-cover">
