--- a/timeline web.html
+++ b/timeline web.html
@@ -125,20 +125,20 @@
         </div>
 
         <div class="view-content view-public active">
-            <p class="text-sm md:text-base text-gray-700 max-w-7xl leading-relaxed">
+            <p class="text-sm md:text-base text-gray-700 max-w-7xl leading-relaxed text-justify">
               Porcelain is quiet, yet powerful. It is more than an object of admiration; it is a witness to history. This timeline narrative follows five chronological rooms that guide visitors from early Ming voyages and global silver trade, through the imperial splendour of the High Qing, the urban transformations of the late nineteenth century, modern reforms, and finally towards digital futures.
             </p>
         </div>
 
         <div class="view-content view-children">
-            <p class="text-sm md:text-base text-gray-700 max-w-7xl leading-relaxed font-medium">
+            <p class="text-sm md:text-base text-gray-700 max-w-7xl leading-relaxed font-medium text-justify">
                 Did you know that plates and vases can tell stories? Imagine porcelain as a time traveler! 🕰️ <br>
                 In this exhibition, we will travel through 500 years of history. We will see how Chinese porcelain sailed on big ships across the oceans, how Emperors used it to show their power, and how it is changing today in the digital world like video games! Let's start the adventure!
             </p>
         </div>
 
         <div class="view-content view-scholar">
-            <p class="text-sm md:text-base text-gray-800 max-w-7xl leading-relaxed">
+            <p class="text-sm md:text-base text-gray-800 max-w-7xl leading-relaxed text-justify">
                 This exhibition posits porcelain not merely as a decorative art, but as an active agent in the history of globalization. Spanning five centuries, the timeline elucidates the dialectical relationship between Jingdezhen's ceramic industry and global socio-economic shifts. From the tributary geopolitics of the Ming Dynasty to the digital ontologies of the 21st century, we examine how material culture mediates cross-cultural exchange and political discourse.
             </p>
         </div>
@@ -165,8 +165,8 @@
             <div class="w-8 md:w-10 flex items-stretch justify-center">
               <div class="timeline-column h-full flex flex-col items-center">
                 <div class="timeline-line"></div>
-                <button class="timeline-step timeline-active" data-section-timeline="1"><div class="timeline-dot"></div><span class="timeline-year-label">MING 1500-1650</span></button>
-                <button class="timeline-step" data-section-timeline="2"><div class="timeline-dot"></div><span class="timeline-year-label">HIGH QING 1650-1800</span></button>
+                <button class="timeline-step timeline-active" data-section-timeline="1"><div class="timeline-dot"></div><span class="timeline-year-label">MING 1500-1650s</span></button>
+                <button class="timeline-step" data-section-timeline="2"><div class="timeline-dot"></div><span class="timeline-year-label">HIGH QING 1650-1800s</span></button>
                 <button class="timeline-step" data-section-timeline="3"><div class="timeline-dot"></div><span class="timeline-year-label">LATE QING 1800-1990s</span></button>
                 <button class="timeline-step" data-section-timeline="4"><div class="timeline-dot"></div><span class="timeline-year-label">MODERN 1990-2035s</span></button>
                 <button class="timeline-step" data-section-timeline="5"><div class="timeline-dot"></div><span class="timeline-year-label">FUTURE 2035+</span></button>
@@ -185,13 +185,13 @@
               <article class="section-article active-article" data-section-article="1">
                 <h2 class="font-serif text-xl md:text-2xl font-semibold text-brand-blue mb-1">Room 1 · The Empire's Gaze (Ming)</h2>
 
-                <div class="view-content view-public active">
+                <div class="view-content view-public active text-justify">
                     <p class="mb-2">Between 1405 and 1433, the Yongle Emperor sent Zheng He on seven major voyages across the Indian Ocean. These expeditions combined imperial ambition with curiosity. By the mid-sixteenth century, global trade transformed with the Manila Galleon route, bringing American silver to China. Jingdezhen responded by creating Blue-and-white porcelain for global buyers.</p>
                 </div>
-                <div class="view-content view-children">
+                <div class="view-content view-children text-justify">
                     <p class="mb-2"><strong>The Great Voyages! 🚢</strong><br>Long ago, a famous admiral named Zheng He sailed giant wooden ships all the way to Africa! He brought back giraffes and jewels. Later, traders from Europe came to buy Chinese porcelain because they loved the beautiful blue drawings on white clay. They paid with silver coins!</p>
                 </div>
-                <div class="view-content view-scholar">
+                <div class="view-content view-scholar text-justify">
                     <p class="mb-2">This era defines the transition from the state-sponsored voyages of Zheng He (1405-1433) to the privatized maritime trade networks of the late Ming. The influx of New World silver via the Manila Galleon trade fundamentally altered the Ming fiscal system and stimulated Jingdezhen's production of 'Kraak' porcelain, specifically designed for European bourgeois tastes.</p>
                 </div>
 
@@ -209,7 +209,7 @@
                 </div>
               </article>
 
-              <article class="section-article" data-section-article="2">
+              <article class="section-article text-justify" data-section-article="2">
                 <h2 class="font-serif text-xl md:text-2xl font-semibold text-brand-blue mb-1">Room 2 · The Cosmos of the Court (High Qing)</h2>
 
                 <div class="view-content view-public active">
@@ -236,7 +236,7 @@
                 </div>
               </article>
 
-              <article class="section-article" data-section-article="3">
+              <article class="section-article text-justify" data-section-article="3">
                 <h2 class="font-serif text-xl md:text-2xl font-semibold text-brand-blue mb-1">Room 3 · A Shift in the Wind (Late Qing)</h2>
 
                 <div class="view-content view-public active">
@@ -272,7 +272,7 @@
                 </div>
               </article>
 
-              <article class="section-article" data-section-article="4">
+              <article class="section-article text-justify" data-section-article="4">
                 <h2 class="font-serif text-xl md:text-2xl font-semibold text-brand-blue mb-1">Room 4 · The World's Echo (Modern)</h2>
 
                 <div class="view-content view-public active">
@@ -299,7 +299,7 @@
                 </div>
               </article>
 
-              <article class="section-article" data-section-article="5">
+              <article class="section-article text-justify" data-section-article="5">
                 <h2 class="font-serif text-xl md:text-2xl font-semibold text-brand-blue mb-1">Room 5 · Prelude to the Future</h2>
 
                 <div class="view-content view-public active">
@@ -337,7 +337,7 @@
       <div class="max-w-6xl mx-auto px-4 md:px-6 lg:px-8 py-8 md:py-10">
         <h2 class="font-serif text-xl md:text-2xl font-semibold text-brand-blue mb-3">Timeline Epilogue · What Does Porcelain Remember?</h2>
 
-        <div class="view-content view-public active">
+        <div class="view-content view-public active text-justify">
             <p class="text-sm md:text-base text-gray-700 leading-relaxed mb-2">
                 Porcelain appears not as a passive backdrop, but as an active witness: it carries pigments from Persia, motifs from Europe, and trade routes across oceans. The timeline asks how objects remember. Porcelain records the shifting balance between court and city, local traditions and global connections.
             </p>
@@ -350,7 +350,7 @@
         </div>
         <div class="view-content view-scholar">
             <p class="text-sm md:text-base text-gray-800 leading-relaxed mb-2">
-                Porcelain functions here as an archival medium. It records the shifting dialectic between center and periphery, empire and market. "Porcelain Witness" invites a reading of the ceramic surface as a palimpsest of global history, questioning how material culture will persist in a dematerialized, digital future.
+                Porcelain functions here as an archival medium. It records the shifting dialectic between center and periphery, empire and market. "Porcelain Witness" invites a reading of the ceramic surface as a palimpsest of global history, questioning how material culture will persist in a digital, dematerialized future.
             </p>
         </div>
 
